# semantic-bookmarks

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  auth.py  config.py  database.py  diagnostic_search.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_search_simple.py  vercel.json
backend/api/: index.py
backend/routers/: auth.py  bookmarks.py  diagnostics.py  search.py
backend/services/: embeddings.py  extractors.py  search.py  semantic_search.py  simple_search.py
backend/workers/: celery.py  tasks.py
database/: init.sql
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/components/: AddBookmarkModal.tsx  BookmarkList.tsx  Layout.tsx  SearchBar.tsx
frontend/src/pages/: _app.tsx  diagnostics.tsx  index.tsx  search.tsx
frontend/src/pages/auth/: login.tsx  register.tsx
frontend/src/store/: authStore.ts  bookmarkStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
