[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-bookmarks"
version = "0.1.0"
description = "Smart bookmarking tool with semantic search"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "pydantic>=2.5.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.1",
    "openai>=1.3.7",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "yt-dlp>=2023.11.16",
    "pdfplumber>=0.10.3",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]